Fix build and lint warnings