@@ -41,6 +41,12 @@ class GasStationAndroidApplicationComposeConventionPlugin : Plugin<Project> {
             packaging {
                 resources.excludes += "/META-INF/{AL2.0,LGPL2.1}"
             }
+
+            testOptions {
+                unitTests.all {
+                    it.jvmArgs("--enable-native-access=ALL-UNNAMED")
+                }
+            }
         }
 
         tasks.withType<KotlinCompile>().configureEach {
